Initial implementation in ng Added styling to create initial look and feel for page.

--- a/index.html
+++ b/index.html
@@ -1,292 +1,26 @@
 <!DOCTYPE html>
-<html><head>
-  
-  <meta charset="UTF-8">
-  <title>Secret Santa!</title>
+<html>
+  <head>
+    <base href="/">
+    <title>Secret Santa</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/css/styles.css">
 
-  
-<!-- <link rel="sytlesheet" href="Input.css" type="text/css"/>  -->
-  <title>Insert title here</title>
+    <!-- Polyfill(s) for older browsers -->
+    <script src="node_modules/core-js/client/shim.min.js"></script>
 
-  
-<!--
-<style>
-body {background-image:url("http://images2.layoutsparks.com/1/189265/horse-snow-fall-winter.gif");}
-</style>
--->
+    <script src="node_modules/zone.js/dist/zone.js"></script>
+    <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <script src="node_modules/systemjs/dist/system.src.js"></script>
 
-<script>
-	// Object defining a participant
-	function Participant(fullName, email, partId)
-	{
-		this.partId = partId;
-		this.fullName = fullName;
-		this.email = email;
-		this.exList = new Array();
+    <script src="systemjs.config.js"></script>
+    <script>
+      System.import('app').catch(function(err){ console.error(err); });
+    </script>
+  </head>
 
-
-	}
-
-	Participant.prototype.removeFromExList = function(participantEmail)
-	{
-		console.log("Before removing: " + this.exList);
-		var notFound = true;
-		var i = 0;
-		for(; i < this.exList.length && notFound; i++)
-		{
-			if(participantEmail.toLowerCase() === this.exList[i].toLowerCase())
-			{
-				notFound = false;
-			}
-		}
-		if(!notFound)
-		{
-			this.exList.splice(i-1, 1);
-			console.log("After removing: " + this.exList);
-		}
-	}
-
-	Participant.prototype.addToExList = function(participantEmail)
-	{
-		console.log("Before adding: " + this.exList);
-		this.exList.push(participantEmail);
-		console.log("After adding: " + this.exList);
-	}
-	// Setup global variables for the page.
-	var m_participants = new Array();
-
-	function validateParticipant()
-	{
-		var emailRegEx = new RegExp("^[_A-Za-z0-9-]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$");
-		var table = document.getElementById("participants");
-		var row = table.rows[this.parentNode.parentNode.rowIndex];
-		var name = row.cells[0].firstChild.value;
-		var email = row.cells[1].firstChild.value;
-		var button = document.getElementById("nextButton");
-		var invalidEntry = name.length == 0 || !emailRegEx.test(email);
-		var indexToUpdate = -1
-		for (var i=0; i < m_participants.length && indexToUpdate === -1; i++)
-		{
-			if(m_participants[i].partId == this.parentNode.parentNode.rowIndex)
-			{
-				indexToUpdate = i;
-			}
-		}
-		// if the entry is valid and didn't exist in our table, add it
-		if(!invalidEntry && indexToUpdate === -1)
-		{
-			// It's a valid entry, so let's add this person to our participants!
-			m_participants.push(new Participant(name, email, this.parentNode.parentNode.rowIndex));
-		}
-		// if the entry is invalid and it did exist, remove the entry
-		else if(invalidEntry && indexToUpdate != -1)
-		{
-			m_participants.splice(indexToUpdate, 1);
-		}
-		// if the entry existed and is valid, update it
-		else if(!invalidEntry && indexToUpdate != -1)
-		{
-			m_participants[indexToUpdate].fullName = name;
-			m_participants[indexToUpdate].email = email;
-		}
-		button.disabled = (table.rows.length <= 2 || (m_participants.length != table.rows.length));
-	}
-
-	function addParticipant()
-	{
-		var emailRegEx = "^[_A-Za-z0-9-]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$";
-		var table = document.getElementById("participants");
-		var rowIndex = table.rows.length;
-		var row = table.insertRow(rowIndex);
-		var name = row.insertCell(0);
-		var nameElement = document.createElement('input');
-		nameElement.setAttribute("type", "text");
-		nameElement.setAttribute("id", rowIndex);
-		nameElement.setAttribute("required", "");
-		nameElement.setAttribute("placeholder", "Name");
-		nameElement.onkeyup = validateParticipant;
-		name.appendChild(nameElement);
-
-		var emailAddr = row.insertCell(1);
-		var emailAddrElement = document.createElement('input');
-		emailAddrElement.setAttribute("type", "text");
-		emailAddrElement.setAttribute("id", rowIndex);
-		emailAddrElement.setAttribute("placeholder", "Email");
-		emailAddrElement.onkeyup = validateParticipant;
-		emailAddrElement.setAttribute("required", "");
-		emailAddr.appendChild(emailAddrElement);
-
-		var deleteButton = row.insertCell(2);
-		//name.innerHTML = "<input type=\"text\" id=\"" + rowIndex +"\" required=\"\" placeholder=\"Name\">";
-		document.getElementById(rowIndex).focus();
-		deleteButton.innerHTML = "<button type=\"button\"><img src=\"deleteParticipant.png\" height=\"10\" width=\"10\"/></button>";
-		deleteButton.onclick = function() {
-			var table = document.getElementById("participants");
-			var indexToRemove = -1
-			for (var i=0; i < m_participants.length && indexToRemove === -1; i++)
-			{
-				if(m_participants[i].partId == this.parentNode.rowIndex)
-				{
-					indexToRemove = i;
-				}
-			}
-			if(indexToRemove != -1)
-			{
-				m_participants.splice(indexToRemove, 1);
-			}
-			table.deleteRow(this.parentNode.rowIndex);
-			var button = document.getElementById("nextButton");
-			button.disabled = true;
-		}
-	}
-
-	function showExList()
-	{
-		var exListDiv = document.getElementById("exListDiv");
-		var partTable = document.getElementById('participants');
-		if(partTable.rows.length < 2)
-		{
-			alert("You'll need more partipants!");
-			return;
-		}
-		var exListTable = document.createElement('table');
-		exListTable.border = "1px";
-		var exListTableHeader = exListTable.createTHead();
-		var headerRow = exListTableHeader.insertRow(0);
-		headerRow.insertCell(0).innerHTML = "Participants";
-		headerRow.insertCell(1).innerHTML = "Exclustion List";
-		var participantNames = new Array();
-		// remove the old table
-		exListDiv.innerHTML = "";
-
-		// get the names of each participant
-		for (var i=0; i < partTable.rows.length; i++)
-		{
-			var row = partTable.rows[i];
-			var nameCell = row.cells[0];
-			var nameTd = nameCell.children[0].value;
-			var emailTd = row.cells[1].children[0].value;
-			if(emailTd.length == 0 || nameTd.length == 0)
-			{
-				alert("Please ensure all names and email address are filled in.");
-				return;
-			}
-			participantNames.push(nameTd);
-		}
-
-		for (var curPar=0; curPar < participantNames.length; ++curPar)
-		{
-			var parRow = exListTable.insertRow(exListTable.rows.length);
-			var parNameCell = parRow.insertCell(0);
-			parNameCell.innerHTML = participantNames[curPar];
-			var exListCell = parRow.insertCell(1);
-			for( var curExList = 0; curExList < participantNames.length; ++curExList)
-			{
-				if(curExList != curPar)
-				{
-					var checkboxElement = document.createElement('input');
-					checkboxElement.setAttribute("type", "checkbox");
-					checkboxElement.setAttribute("value", participantNames[curExList]);
-					checkboxElement.onclick = function() {
-						var participantName = this.value;
-						console.log("Selected Participant: " + participantName);
-						var rowIndex = this.parentNode.parentNode.rowIndex - 1;
-						var selectedParticipant = getParticipantFromName(participantName);
-						console.log("Email to update: " + selectedParticipant.email);
-						if(this.checked)
-						{
-							m_participants[rowIndex].addToExList(selectedParticipant.email);
-						}
-						else
-						{
-							m_participants[rowIndex].removeFromExList(selectedParticipant.email);
-						}
-					}
-					//checkboxElement.innerHTML = participantNames[curExList] + "<br>";
-					var nameText = document.createTextNode(participantNames[curExList]);
-					var brTag = document.createElement("BR");
-					exListCell.appendChild(checkboxElement);
-					exListCell.appendChild(nameText);
-					exListCell.appendChild(brTag);
-				}
-			}
-		}
-		// add the new table to the div
-		exListDiv.appendChild(exListTable);
-
-		document.getElementById("partiEntry").style.display = 'none';
-		document.getElementById("exListEntry").style.display = 'block';
-	}
-
-	function getParticipantFromName(participantName)
-	{
-		var lowerCase = participantName.toLowerCase();
-		console.log(m_participants);
-		for(var i = 0; i < m_participants.length; ++i)
-		{
-			if(m_participants[i].fullName.toLowerCase() === lowerCase)
-			{
-				return m_participants[i];
-			}
-		}
-
-	}
-
-	function showParticipants()
-	{
-		document.getElementById("partiEntry").style.display = 'block';
-    	document.getElementById("exListEntry").style.display = 'none';
-	}
-
-	function doSend()
-	{
-		var subject = document.getElementById("subject");
-		var emailBody = document.getElementById("emailBody");
-		if(subject.value.length === 0)
-		{
-			alert("Please enter a subject for the email to be sent out");
-		}
-		else if(emailBody.value.length === 0)
-		{
-			alert("Please enter a message body for the email to be sent out");
-		}
-	}
-
-	function validateEmail()
-	{
-		var subject = document.getElementById("subject");
-		var emailBody = document.getElementById("emailBody");
-		var sendButton = document.getElementById("sendButton");
-		sendButton.disabled = (subject.value.length === 0 || emailBody.value.length === 0);
-	}
-
-	/*
-	JSON request will contain:
-	{"subject":"Secret Santa subject", "body":"This is the email body", 
-		"participants":[
-			{"name":"John Doe", "email":"jd@gmail.com", 
-				"exList"[{"email":"notme@gmail.com"}, {"email":"notmetoo@gmail.com"}]},
-			{"name":"Not Me", "email":"notme@gmail.com", "exList":[]},
-			{"name":"Not Me Too", "email":"notmetoo@gamil.com" "exList":[{"email":"jd@gmail.com"}]}
-		] 
-	}
-	*/
-</script>
-</head><body>
-<divs id="messageInfo">
-	Enter Message Subject: <input id="subject" type="text" size="80" required="" pattern="^(?!\s*$).+" onkeyup="validateEmail()"><br>
-	Enter Message Body:<br>
-	<textarea id="emailBody" required="" pattern="^(?!\s*$).+" onkeyup="validateEmail()" rows="20" cols="80"></textarea><br>
-</div>
-
-<div id="partiEntry">
-	<table id="participants">
-	</table>
-	<button onclick="addParticipant()">Add Participant</button>
-	<br>
-	<button id="nextButton" onclick="showExList()" disabled>Next</button>
-</div>
-
-<div id="exListEntry" style="display:none">
-	<div id="exListDiv"></div>
-	<button onclick="showParticipants()">Previous</button><button id="sendButton" onclick="doSend()">Send</button>
+  <body>
+    <my-app>Loading AppComponent content here ...</my-app>
+  </body>
+</html>
