Adjust layout on message page Create left, right, and content pane.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
   </head>
 
   <body>
+    <!-- Left side -->
+    <div class="leftpane">
+      <img src="/assets/img/tree-background.jpg"/>
+    </div>
+    <div class="rightpane">
+      <img src="/assets/img/tree-background.jpg"/>
+    </div>
     <my-app>Loading AppComponent content here ...</my-app>
   </body>
 </html>
