Simplify layout and add routing

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
   <body>
     <!-- Left side -->
     <div class="leftpane">
-      <img src="/assets/img/tree-background.jpg"/>
+      <img src="/assets/img/tree-background-left.jpg"/>
     </div>
     <div class="rightpane">
-      <img src="/assets/img/tree-background.jpg"/>
+      <img src="/assets/img/tree-background-right.jpg"/>
     </div>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <div class="middlepane">
+      <my-app>Loading AppComponent content here ...</my-app>
+    </div>
   </body>
 </html>
